fix icon slot, fix overflow

--- a/packages/components/src/components/core-button/core-button.less
+++ b/packages/components/src/components/core-button/core-button.less
@@ -611,6 +611,7 @@
   font: inherit;
   font-weight: bold;
   line-height: 18px;
+  max-width: inherit;
   outline: none;
   padding: 0 15px;
   position: relative;
